--- a/Ressources/Public/index.html
+++ b/Ressources/Public/index.html
@@ -5,24 +5,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/scss/main.scss">
+    <link rel="stylesheet" href="/main.4a07f87c.css">
     <title>Document</title>
-</head>
+<script src="/main.4a07f87c.js"></script></head>
 
 <body>
     <div class="nav-container">
         <nav class="navbar">
             <div class="logo">
-                <a href=""><img src="../img/zmg_logo.svg" alt="Logo"></a>
+                <a href=""><img src="/zmg_logo.817211ac.svg" alt="Logo"></a>
             </div>
-            <ul class=nav-items>
-                <li><p>Anmelden</p><img src="../img/icon_anmelden.svg" alt=""></li>
-                <li><img src="../img/icon_suche.svg" alt=""></li>
+            <ul class="nav-items">
+                <li><p>Anmelden</p><img src="/icon_anmelden.80fb8ffa.svg" alt=""></li>
+                <li><img src="/icon_suche.3eb15b2d.svg" alt=""></li>
                 <li> <button class="menuButton show-menu" onclick="this.classList.toggle('opened');this.setAttribute('aria-expanded', this.classList.contains('opened'))" aria-label="Main Menu">
                     <svg width="40" height="40" viewBox="0 0 100 100">
-                      <path class="line line1" d="M 20,29.000046 H 80.000231 C 80.000231,29.000046 94.498839,28.817352 94.532987,66.711331 94.543142,77.980673 90.966081,81.670246 85.259173,81.668997 79.552261,81.667751 75.000211,74.999942 75.000211,74.999942 L 25.000021,25.000058" />
-                      <path class="line line2" d="M 20,50 H 80" />
-                      <path class="line line3" d="M 20,70.999954 H 80.000231 C 80.000231,70.999954 94.498839,71.182648 94.532987,33.288669 94.543142,22.019327 90.966081,18.329754 85.259173,18.331003 79.552261,18.332249 75.000211,25.000058 75.000211,25.000058 L 25.000021,74.999942" />
+                      <path class="line line1" d="M 20,29.000046 H 80.000231 C 80.000231,29.000046 94.498839,28.817352 94.532987,66.711331 94.543142,77.980673 90.966081,81.670246 85.259173,81.668997 79.552261,81.667751 75.000211,74.999942 75.000211,74.999942 L 25.000021,25.000058"></path>
+                      <path class="line line2" d="M 20,50 H 80"></path>
+                      <path class="line line3" d="M 20,70.999954 H 80.000231 C 80.000231,70.999954 94.498839,71.182648 94.532987,33.288669 94.543142,22.019327 90.966081,18.329754 85.259173,18.331003 79.552261,18.332249 75.000211,25.000058 75.000211,25.000058 L 25.000021,74.999942"></path>
                     </svg>
                   </button>
                 </li>
@@ -122,7 +122,7 @@
     </div> <!--Wrapper closing-->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="./js/main.js"></script>
+    <script src="/main.fb6bbcaf.js"></script>
 </body>
 
 </html>
