--- a/Ressources/Private/index.html
+++ b/Ressources/Private/index.html
@@ -13,7 +13,7 @@
     <div class="nav-container">
         <nav class="navbar">
             <div class="logo">
-                <a href=""><img src="../img/zmg_logo.svg" alt="Logo"></a>
+                <a href="index.html"><img src="../img/zmg_logo.svg" alt="Logo"></a>
             </div>
             <ul class=nav-items>
                 <li><p>Anmelden</p><img src="../img/icon_anmelden.svg" alt=""></li>
@@ -32,31 +32,41 @@
 
     <div class="menu hidden">
         <ul class="nav-level-1">
-            <li><a href="">News</a></li>
-            <li><a href="">Studien</a></li>
-            <li><a href="">Services</a></li>
-            <li><a href="">Tools & Instrumente</a></li>
-            <li><a href="">Seminare & Workshops</a></li>
-            <li><a href="">ZMG-Archiv</a></li>
-            <li><a href="">Unser Team</a></li>
+            <li><a href="sub.html">News</a></li>
+            <li><a href="sub.html">Studien</a></li>
+            <li><p class="has-subPage services">Services</p></li>
+            <li><p class="has-subPage tools">Tools & Instrumente</p></li>
+            <li><a href="sub.html">Seminare & Workshops</a></li>
+            <li><a href="sub.html">ZMG-Archiv</a></li>
+            <li><a href="sub.html">Unser Team</a></li>
+        </ul>
+        <ul class="nav-level-2 level-2-services hidden">
+            <li><a href="sub.html">Reichweiten der Zeitungen</a></li>
+            <li><a href="sub.html">Auflagen der Zeitungen</a></li>
+            <li><a href="sub.html">Media- und Planungsdaten</a></li>
+            <li><a href="sub.html">Media-Beratung</a></li>
+            <li><a href="sub.html">Daten & Services für Verlage</a></li>
+            <li><a href="sub.html">Das Engagement der ZMG</a></li>
         </ul>
 
-        <ul class="nav-level-2 hidden">
-            <li><a href="">Reichweiten der Zeitungen</a></li>
-            <li><a href="">Auflagen der Zeitungen</a></li>
-            <li><a href="">Media- und Planungsdaten</a></li>
-            <li><a href="">Media-Beratung</a></li>
-            <li><a href="">Daten & Services für Verlage</a></li>
-            <li><a href="">Das Engagement der ZMG</a></li>
+        <ul class="nav-level-2 level-2-tools hidden ">
+            <li><a href="sub.html">Werbewirkungstools</a></li>
+            <li><a href="sub.html">Planungstools</a></li>
+            <li><a href="sub.html">Buchungstools</a></li>
         </ul>
-
+        <div class="menu-teaser hidden">
+            <div class="menu-teaser-image">
+            </div>
+            <h3>Dies ist ein Teaser</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, cum. Nobis dolorem voluptate eaque quod? Obcaecati tenetur ipsam mollitia minus.</p>
+        </div>
     </div>
 
-    <div class="wrapper">
+    <div class="content-wrapper">
+    
         <div class="bread-crumb">
             <ul>
-                <li><a href="">Startseite</a></li>
-                <li><a href="">Sub-Page</a></li>
+                <li><a href="index.html">Startseite</a></li>
             </ul>
         </div>
 
@@ -64,62 +74,56 @@
             <h1>Studien</h1>
 
             <div class="teaser">
-                <img src="" alt="">
-                <header>
+                <img src="../img/teaser/1.png" alt="first-teaser">
+                <div class="teaser-content">
                     <p class="teaser-category">Digitalisierung, Journalismus</p>
                     <h2 class="teaser-title">Studie Digitaler Journalismus</h2>
-                </header>
-                <div class="teaser-body">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, odit dolorum obcaecati numquam aliquam eum beatae minus placeat ad. Libero iusto nam mollitia tenetur impedit provident animi voluptas dolorum, saepe itaque, ab molestiae laudantium corporis!</p>
-                    <a href="">Mehr</a>
+                    <a href="sub.html">Mehr</a>
                 </div>
             </div>
             <div class="teaser">
-                <img src="" alt="">
-                <header>
+                <img src="../img/teaser/3.png" alt="second-teaser">
+                <div class="teaser-content">
                     <p class="teaser-category">Branche, Energieberater</p>
                     <h2 class="teaser-title">Energieanbieter-Studie</h2>
-                </header>
-                <div class="teaser-body">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis sit quis aliquid ratione perspiciatis sint, molestias placeat doloremque nemo harum praesentium rerum dicta quo iusto neque quam recusandae, maiores sequi impedit? Dolores cum temporibus voluptates!</p>
-                    <a href="">Mehr</a>
+                    <a href="sub.html">Mehr</a>
                 </div>
             </div>
             <div class="teaser">
-                <img src="" alt="">
-                <header>
+                <img src="../img/teaser/4.png" alt="third-teaser">
+                <div class="teaser-content">
                     <p class="teaser-category">Digitalisierung, Journalismus, Aktuell</p>
                     <h2 class="teaser-title">E-Paper-Studie 2020</h2>
-                </header>
-                <div class="teaser-body">
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit qui quis soluta quod iusto a numquam fugit saepe natus cumque ea odio nisi, hic laborum? Vitae voluptate excepturi blanditiis. Nam quam magni reiciendis odit soluta!</p>
-                    <a href="">Mehr</a>
+                    <a href="sub.html">Mehr</a>
                 </div>
             </div>
             <div class="teaser">
-                <img src="" alt="">
-                <header>
+                <img src="../img/teaser/2.png" alt="third-teaser">
+                <div class="teaser-content">
                     <p class="teaser-category">Digitalisierung</p>
                     <h2 class="teaser-title">Smart-Home-Studie</h2>
-                </header>
-                <div class="teaser-body">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum pariatur, eveniet aspernatur quisquam quaerat quibusdam, ea repudiandae deleniti nemo nihil, laudantium laboriosam! Architecto, dolorem! Quod iste nostrum tenetur dolorem atque quia quos accusamus nihil rerum!</p>
-                    <a href="">Mehr</a>
+                    <a href="sub.html">Mehr</a>
                 </div>
             </div>
             <div class="teaser">
-                <img src="" alt="">
-                <header>
+                <img src="../img/teaser/5.png" alt="first-teaser">
+                <div class="teaser-content">
                     <p class="teaser-category">Aktuell, Journalismus</p>
                     <h2 class="teaser-title">Corona-Studie</h2>
-                </header>
-                <div class="teaser-body">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi beatae a, veniam eaque inventore reprehenderit necessitatibus, omnis autem, facilis officiis obcaecati cupiditate laborum fuga facere sapiente pariatur quae quasi perspiciatis molestias impedit soluta! Iusto, laborum!</p>
-                    <a href="">Mehr</a>
+                    <a href="sub.html">Mehr</a>
                 </div>
             </div>
+
+            <a href="" class="cta">Zum zmg-Wissensportal</a>
         </main>
+
     </div> <!--Wrapper closing-->
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="./js/main.js"></script>
