--- a/Ressources/Private/sub.html
+++ b/Ressources/Private/sub.html
@@ -16,21 +16,26 @@
                 <a href="index.html"><img src="../img/zmg_logo.svg" alt="Logo"></a>
             </div>
             <ul class=nav-items>
-                <li>
-                    <p>Anmelden</p><img src="../img/icon_anmelden.svg" alt="">
-                </li>
-                <li><img src="../img/icon_suche.svg" alt=""></li>
-                <li> <button class="menuButton show-menu"
-                        onclick="this.classList.toggle('opened');this.setAttribute('aria-expanded', this.classList.contains('opened'))"
-                        aria-label="Main Menu">
-                        <svg width="40" height="40" viewBox="0 0 100 100">
-                            <path class="line line1"
-                                d="M 20,29.000046 H 80.000231 C 80.000231,29.000046 94.498839,28.817352 94.532987,66.711331 94.543142,77.980673 90.966081,81.670246 85.259173,81.668997 79.552261,81.667751 75.000211,74.999942 75.000211,74.999942 L 25.000021,25.000058" />
-                            <path class="line line2" d="M 20,50 H 80" />
-                            <path class="line line3"
-                                d="M 20,70.999954 H 80.000231 C 80.000231,70.999954 94.498839,71.182648 94.532987,33.288669 94.543142,22.019327 90.966081,18.329754 85.259173,18.331003 79.552261,18.332249 75.000211,25.000058 75.000211,25.000058 L 25.000021,74.999942" />
-                        </svg>
-                    </button>
+                <li><p>Anmelden</p><svg xmlns="http://www.w3.org/2000/svg" width="32" height="33" viewBox="0 0 32 33">
+                    <g id="Person" transform="translate(-1256 -3484.5)">
+                      <rect id="Rechteck_111" data-name="Rechteck 111" width="32" height="32" transform="translate(1256 3485)" fill="#fff" opacity="0"/>
+                      <path id="Schnittmenge_4" data-name="Schnittmenge 4" d="M-9900.238-10c-.275-4.4-.527-8.81-.781-13.215-.158-2.725,1.029-3.982,3.781-3.993,2.711-.012,5.42,0,8.129,0,.9,0,1.807,0,2.709,0,1.887,0,3.773-.006,5.66.01,2.4.019,3.48,1.03,3.406,3.438-.105,3.574-.34,7.146-.561,10.715q-.1,1.526-.205,3.05Zm11.182-19.681a6.2,6.2,0,0,1-6.172-6.226A5.963,5.963,0,0,1-9889.2-42a5.978,5.978,0,0,1,6.146,6.108,6.146,6.146,0,0,1-5.965,6.21Z" transform="translate(11161.182 3526.999)" stroke="rgba(0,0,0,0)" stroke-miterlimit="10" stroke-width="1"/>
+                    </g>
+                  </svg></li>
+                <li><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+                    <g id="Lupe" transform="translate(-1295 -3485)">
+                      <rect id="Rechteck_112" data-name="Rechteck 112" width="32" height="32" transform="translate(1295 3485)" fill="#fff" opacity="0"/>
+                      <path id="Icon_material-search" data-name="Icon material-search" d="M27.37,24.626H25.925l-.512-.494a11.91,11.91,0,1,0-1.281,1.281l.494.512V27.37l9.148,9.13L36.5,33.774Zm-10.978,0a8.233,8.233,0,1,1,8.233-8.233A8.222,8.222,0,0,1,16.393,24.626Z" transform="translate(1290.5 3480.5)"/>
+                    </g>
+                  </svg>
+                  </li>
+                <li> <button class="menuButton show-menu" onclick="this.classList.toggle('opened');this.setAttribute('aria-expanded', this.classList.contains('opened'))" aria-label="Main Menu">
+                    <svg width="40" height="40" viewBox="0 0 100 100">
+                      <path class="line line1" d="M 20,29.000046 H 80.000231 C 80.000231,29.000046 94.498839,28.817352 94.532987,66.711331 94.543142,77.980673 90.966081,81.670246 85.259173,81.668997 79.552261,81.667751 75.000211,74.999942 75.000211,74.999942 L 25.000021,25.000058" />
+                      <path class="line line2" d="M 20,50 H 80" />
+                      <path class="line line3" d="M 20,70.999954 H 80.000231 C 80.000231,70.999954 94.498839,71.182648 94.532987,33.288669 94.543142,22.019327 90.966081,18.329754 85.259173,18.331003 79.552261,18.332249 75.000211,25.000058 75.000211,25.000058 L 25.000021,74.999942" />
+                    </svg>
+                  </button>
                 </li>
             </ul>
         </nav>
@@ -119,6 +124,17 @@
 
     </div>
     <!--Wrapper closing-->
+
+    <div class="footer-container">
+        <div class="footer">
+            <ul>
+                <li><a href="index.html">Impressum</a></li>
+                <li><a href="index.html">Datenschutz</a></li>
+                <li><a href="index.html">Jobs</a></li>
+                <li><a href="index.html">Anmelden</a></li>
+            </ul>
+        </div>
+    </div>
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
