[TASK] Background diamonds

--- a/Ressources/Private/sub.html
+++ b/Ressources/Private/sub.html
@@ -10,6 +10,10 @@
 </head>
 
 <body>
+    <img class="background-left" src="../img/bg_objekt_links.svg" alt="background">
+    <img class="background-right" src="../img/bg_objekt_oben_rechts.svg" alt="background">
+    <img class="background-right-bottom" src="../img/bg_objekt_unten_rechts_menu.svg" alt="background">
+    
     <div class="nav-container">
         <nav class="navbar">
             <div class="logo">
